# ace-rs

./: .gitignore  Cargo.toml  README.md  config.sample.toml  todo.md  words.txt
src/: ace.rs  anki.rs  config.rs  deinflect.rs  dict.rs  main.rs  media.rs  utils.rs
