[package]
name = "ace-rs"
version = "0.1.0"
authors = ["Kamui fin-kamui@pm.me"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
toml = "0.5.8"
genanki-rs = "0.1.2"
serde = "1.0.130"
serde_derive = "1.0.130"
jp_inflections = "0.1.1"
rusqlite = "0.25.1"
directories = "4.0.1"
json = "0.12.4"
anyhow = "1.0.44"
