[package]
name = "ace-rs"
version = "0.1.0"
authors = ["Kamui fin-kamui@pm.me"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
toml = "0.5.8"
serde = "1.0.130"
serde_derive = "1.0.130"
rusqlite = "0.25.1"
directories = "4.0.1"
anyhow = "1.0.44"
serde_json = "1.0.68"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
regex = "1.5.4"
clipboard = "0.5.0"
json5 = "0.4.1"
uuid = { version = "0.8", features = ["v4"] }
indicatif = "0.16.2"
